Implementa funcionalidad para mostrar detalles de películas
Este commit introduce varias modificaciones para permitir que los usuarios vean los detalles de una película seleccionada desde la lista principal. Los cambios incluyen:

- Modificación del MovieAdapter para pasar datos adicionales (originalLanguage y releaseDate) en el Intent al iniciar MovieDetailActivity.

- Ajustes en MovieDetailActivity para extraer y mostrar estos datos adicionales, junto con los ya existentes (título, descripción, path del póster y calificación).

- Actualización del layout activity_movie_detail.xml para incluir vistas adicionales que muestran el idioma original y la fecha de lanzamiento de la película.

Estos cambios mejoran la experiencia del usuario al proporcionar más información relevante sobre cada película.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ReelReveal"
         tools:targetApi="31">
-
+        <activity
+            android:name="ui.MovieDetailActivity"
+            android:exported="false" />
         <activity
             android:name="ui.MainActivity"
             android:exported="true">
@@ -24,9 +26,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <!-- Si tienes otras actividades, se listarán aquí también. -->
-
     </application>
 
 </manifest>
